# composition-cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.cpp
include/: CMakeLists.txt  CMatrix.h  CWhole.h
src/: CMakeLists.txt  CMatrix.cpp  CWhole.cpp  test.cpp
